force-app/src/objects/cpm__Payment_Journey_Rule__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Business_Days_After_Previous_Step__c</fullName>
        <label>Business Days After Previous Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Collect_Nr_Of_Business_Days_After_Run__c</fullName>
        <label>Collect Nr Of Business Days After Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Journey__c</fullName>
        <label>Payment Journey</label>
        <referenceTo>cpm__Payment_Journey__c</referenceTo>
        <relationshipLabel>Payment Journey Rules</relationshipLabel>
        <relationshipName>Payment_Journey_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recollect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Journey Rule</label>
    <nameField>
        <label>Payment Journey Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Journey Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>cpm__Recollect_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>if (AND (ISPICKVAL( cpm__Type__c , &apos;Recollect&apos;),ISBLANK( cpm__Collect_Nr_Of_Business_Days_After_Run__c )),true,false)</errorConditionFormula>
        <errorDisplayField>cpm__Collect_Nr_Of_Business_Days_After_Run__c</errorDisplayField>
        <errorMessage>Collect number of Business Days After Run is required for &apos;Recollect&apos; Type</errorMessage>
    </validationRules>
</CustomObject>